# sprig

./: .env.example  .gitignore  CLAUDE.md  README.md  config-template.yml  config.yml  install.sh  package-release.sh  pyproject.toml  requirements.txt  sprig.py  sprig.spec
.github/: ISSUE_TEMPLATE.md
.github/workflows/: claude-code-review.yml  release.yml
certs/: .gitkeep
launchers/: README.txt  Sprig Connect.command  Sprig Sync.command  Sprig.command
scripts/: install.ps1  install.sh  package-release.sh  sprig.spec
sprig/: __init__.py  __main__.py  auth.py  categorize.py  categorizer.py  cli.py  credential_manager.py  credentials.py  database.py  export.py  fetch.py  logger.py  paths.py  pipeline.py  prompt_catalog.py  pull.py  sync.py  teller_client.py  web.py
sprig/models/: __init__.py  category_config.py  claude.py  cli.py  config.py  credentials.py  prompts.py  runtime_config.py  teller.py
sprig/prompts/: categorize.txt
sprig/templates/: connect.html  dashboard.html
tests/: __init__.py  conftest.py  test_auth.py  test_categorize.py  test_categorize_batching.py  test_categorizer.py  test_categorizer_batching.py  test_categorizer_error_handling.py  test_claude.py  test_claude_models.py  test_cli.py  test_cli_models.py  test_config.py  test_credential_manager.py  test_credentials.py  test_database.py  test_export.py  test_fetch.py  test_logger.py  test_manual_overrides.py  test_models.py  test_pipeline.py  test_prompt_catalog.py  test_pull.py  test_sync.py  test_sync_counting.py  test_teller_client.py
